[tool.poetry]
name = "viewer"
version = "0.1.0"
description = "Data viewer for llm dataset"
authors = ["yeoV <ys_lee1017@naver.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
streamlit = "^1.30.0"

[tool.poetry.group.dev.dependencies]
black = "^24.1.1"
pytest = "^8.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
